--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -70,7 +70,10 @@
 
         img_div.setAttribute("class", "info-div");
         img_div.setAttribute("id", "img-div");
+        img_div.style.alignItems = "center"
         img_show.setAttribute("class", "show-img");
+        img_show.setAttribute("width", "300px");
+        img_show.setAttribute("height", "300px");
         img_input.setAttribute("type", "file");
         img_input.setAttribute("id", "file");
         img_input.setAttribute("name", "image");
