--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,9 @@
 login
 {% endblock %}
 
-{% block css %}/static/css/login.css{% endblock %}
+{% block css %}
+    <link rel="stylesheet" href="/static/css/login.css">
+{% endblock %}
 
 {% block script %}
     <script>
