--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,9 @@
 register
 {% endblock %}
 
-{% block css %}/static/css/register.css{% endblock %}
+{% block css %}
+    <link rel="stylesheet" href="/static/css/register.css">
+{% endblock %}
 
 {% block script %}
     <script>
