--- a/templates/comment.html
+++ b/templates/comment.html
@@ -26,7 +26,7 @@
 {% extends "base.html" %}
 
 {% block css %}
-/static/css/comment.css
+    <link rel="stylesheet" href="/static/css/comment.css">
 {% endblock %}
 
 {% block script %}
