--- a/templates/register.html
+++ b/templates/register.html
@@ -36,8 +36,8 @@ register
             contentType: "application/json",
             dataType: "json",
             data:JSON.stringify({
-                phone:$("#phone").value,
-                password:$("#password").value,
+                phone:$("#phone").val(),
+                password:$("#password").val(),
                 user_type: user_type,
             }),
             success:function (data){
