--- a/templates/comment.html
+++ b/templates/comment.html
@@ -43,7 +43,7 @@
         {#when belong is loaded#}
         $(document).on("belongLoaded", function () {
 
-            get_comment();
+            get_and_render_comment();
 
             console.log(belong)
             if (!belong) {
